[package]
name = "ogbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.core_extensions]
version = "1.5"
features = [
    # enables items that use anything from the standard `std` or `alloc` crates.
    "std",
    # Requires the latest stable release, enables all the rust-version-dependent features
    "rust_latest_stable",
    # enables all the item features
    "transparent_newtype",
    "self_ops"
]

[dependencies]
custom_derive = "0.1.7"
newtype_derive = "0.1.6"
actix = "0.13.0"
actix-rt = "2.7.0"
actix-codec = "0.5.0"
awc = {version = "3.0.0", features = ["openssl"]}
futures = "0.3.21"
log = "0.4.16"
openssl = "0.10.38"